# transmembrane_potential

./: .gitignore  gekko_half_solved.py  gekko_nondimensionalized.py  gekko_optimal_control.py  ilqr_test.py  math_notes.txt  math_notes_hampath.txt  math_notes_nondimensionalization_take_2.txt  math_notes_nondimensionalization_take_4.txt  math_notes_nondimensionalization_take_5.txt  math_notes_simplification_take_6.txt  pore_N_ilqr_test.py  sagestuff.ipynb  scipy_conventional_optimization.py  sympy_ODE.py  sympy_constraint_solutions.py  sympy_logistic_ramp.py  sympy_symbolic_ODE_test.py  sympy_units.py  transmembrane_analytic_constraint.py  transmembrane_bang_bang.py  transmembrane_diffeq.py  transmembrane_diffeq_compare_test.py  transmembrane_diffeq_compare_test_old.py  transmembrane_diffeq_output_compare.py  transmembrane_gaussian.py  transmembrane_gaussian_optimize.py  transmembrane_gaussian_varying_membrane_conduct.py  transmembrane_lib.py  transmembrane_math.ipynb  transmembrane_optimize.py  transmembrane_steady_state.py  transmembrane_subtract_fourier.py  transmembrane_test.py  transmembrane_test_solution.py
DifferentialDynamicProgramming/: ddp.jl
PSOPT/: .gitignore  CMakeLists.txt  download.sh  virus_optimize.cxx
casADi/: virus_optimize.py
nagurka_fourier_method/: .gitignore  README.md  data.pickle  data_30t.pickle  fourier.py  math.jl  math.txt  naguka_fourier_lib.py  nagurka_boundary_condition_rederivation.txt  nagurka_fourier.jl  nagurka_fourier_alt_statements.jl  nagurka_fourier_lib.py  nagurka_fourier_lib_restate.py  nagurka_fourier_proc_1988_ACC.py  (+13 more)
(+42 files in other folders)
